--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2-binary = "^2.9.9"
 yfinance = "^0.2.44"
 bcrypt = "^4.2.0"
 passlib = "^1.7.4"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
