--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://avnadmin:AVNS_m9oyag8y4lA9tCzfy0n@sellscale-challenge-db-sellscale-challenge.d.aivencloud.com:21594/sellscale-db?sslmode=require
+ALPHA_VANTAGE_API_KEY=5HG2WQ7ISQIJXUK3
